@startuml
'https://plantuml.com/class-diagram

abstract class AbstractSearcher {
AbstractSearcher(IPrettyGirl girl)
abstract void show()
}
interface IPrettyGirl {
void goodLooking()
void niceFigure()
void greatTemperament()
}

class PrettyGirl
class Searcher

IPrettyGirl <--o AbstractSearcher
AbstractSearcher <|-- Searcher
IPrettyGirl <|-- PrettyGirl

@enduml